--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="author" content="Kaido">
     <meta name="keywords" content="html, css, javascript">
 
-    <link rel="stylesheet" href="introducaoCSS.css">
+    <link rel="stylesheet" href="introducaoCss.css">
 
 </head>
 
